--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 
       
     <script src="%PUBLIC_URL%/js/modernizr.js"></script>
-    <title>Daniel Ruiz - CV</title>
+    <title>Mª José Uceda - CV</title>
   </head>
   <body>
     <noscript>
